[gd_scene load_steps=17 format=2]

[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_Assets/DomSyn_Red_Card.png" type="Texture" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=3]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_GUI/Red_PactCard.gd" type="Script" id=5]
[ext_resource path="res://Fonts/trajanpro/trajanpro-regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_Assets/DomSyn_Red_Card_Highlighted.png" type="Texture" id=7]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Red_Related/DomSyn_Red_Assets/DomSyn_Red_TierCardPic_Bronze.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=7]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 2 )
VScrollBar/styles/grabber_highlight = SubResource( 3 )
VScrollBar/styles/grabber_pressed = SubResource( 4 )
VScrollBar/styles/scroll = SubResource( 5 )
VScrollBar/styles/scroll_focus = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[node name="Red_PactCard" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 140 )
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvancedButton" parent="." instance=ExtResource( 4 )]
margin_right = 300.0
margin_bottom = 145.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 145.0
mouse_filter = 2
custom_constants/separation = 0

[node name="HeaderMarginer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 20.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 6
custom_constants/margin_left = 8

[node name="NameLabel" type="Label" parent="VBoxContainer/HeaderMarginer"]
margin_left = 8.0
margin_top = 6.0
margin_right = 292.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Name"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 300.0
margin_bottom = 36.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 16
custom_constants/margin_left = 2

[node name="HBoxContainer" type="Control" parent="VBoxContainer/MarginContainer"]
margin_left = 2.0
margin_top = 16.0
margin_right = 298.0
margin_bottom = 16.0
mouse_filter = 2

[node name="GoodMarginer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 7.0
margin_top = -6.0
margin_right = 121.0
margin_bottom = 104.0
rect_min_size = Vector2( 87, 100 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/GoodMarginer"]
margin_right = 114.0
margin_bottom = 110.0
mouse_filter = 2
theme = SubResource( 7 )
scroll_horizontal_enabled = false

[node name="GoodDescriptions" parent="VBoxContainer/MarginContainer/HBoxContainer/GoodMarginer/ScrollContainer" instance=ExtResource( 3 )]
margin_right = 114.0
margin_bottom = 110.0
rect_min_size = Vector2( 87, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[node name="PicMarginer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 129.0
margin_top = -4.0
margin_right = 167.0
margin_bottom = 34.0
rect_min_size = Vector2( 38, 38 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PactIcon" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer/PicMarginer"]
margin_right = 38.0
margin_bottom = 38.0
mouse_filter = 2

[node name="TierMarginer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 129.0
margin_top = 43.0
margin_right = 165.0
margin_bottom = 80.0
rect_min_size = Vector2( 26, 26 )
mouse_filter = 2
custom_constants/margin_top = 3
custom_constants/margin_left = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TierPic" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer/TierMarginer"]
margin_left = 2.0
margin_top = 3.0
margin_right = 36.0
margin_bottom = 37.0
texture = ExtResource( 8 )

[node name="TierTextMarginer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/TierMarginer"]
margin_left = 2.0
margin_top = 3.0
margin_right = 36.0
margin_bottom = 37.0
custom_constants/margin_top = 3
custom_constants/margin_left = 1

[node name="TierLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/TierMarginer/TierTextMarginer"]
margin_left = 1.0
margin_top = 10.0
margin_right = 34.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "III"
align = 1
valign = 1

[node name="BadMarginer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 175.0
margin_top = -6.0
margin_right = 289.0
margin_bottom = 104.0
rect_min_size = Vector2( 87, 100 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/BadMarginer"]
margin_right = 114.0
margin_bottom = 110.0
mouse_filter = 2
theme = SubResource( 7 )
scroll_horizontal_enabled = false

[node name="BadDescriptions" parent="VBoxContainer/MarginContainer/HBoxContainer/BadMarginer/ScrollContainer" instance=ExtResource( 3 )]
margin_right = 114.0
margin_bottom = 110.0
rect_min_size = Vector2( 87, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[connection signal="pressed_mouse_event" from="AdvancedButton" to="." method="_on_AdvancedButton_pressed_mouse_event"]
